@@ -19,37 +19,37 @@
  */
 package org.xwiki.sheet.internal;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.lang3.RandomStringUtils;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.xwiki.bridge.DocumentAccessBridge;
 import org.xwiki.bridge.DocumentModelBridge;
 import org.xwiki.display.internal.DocumentDisplayer;
 import org.xwiki.display.internal.DocumentDisplayerParameters;
 import org.xwiki.model.reference.DocumentReference;
-import org.xwiki.rendering.block.Block;
 import org.xwiki.rendering.block.XDOM;
 import org.xwiki.sheet.SheetManager;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.mockito.Mockito.*;
 
 /**
  * Unit tests for {@link SheetDocumentDisplayer}.
- * 
+ *
  * @version $Id$
  */
-public class SheetDocumentDisplayerTest
+@ComponentTest
+class SheetDocumentDisplayerTest
 {
-    @Rule
-    public MockitoComponentMockingRule<DocumentDisplayer> mocker = new MockitoComponentMockingRule<DocumentDisplayer>(
-        SheetDocumentDisplayer.class);
+    @InjectMockComponents
+    private SheetDocumentDisplayer displayer;
 
     /**
      * The reference to the displayed document.
@@ -64,28 +64,34 @@ public class SheetDocumentDisplayerTest
     /**
      * The component used to access the documents.
      */
+    @MockComponent
     private DocumentAccessBridge documentAccessBridge;
 
     /**
      * The component used to access the model.
      */
+    @MockComponent
     private ModelBridge modelBridge;
 
-    @Before
-    public void configure() throws Exception
+    @MockComponent
+    private SheetManager sheetManager;
+
+    @MockComponent
+    private DocumentDisplayer documentDisplayer;
+
+    @BeforeEach
+    void configure()
     {
-        this.modelBridge = this.mocker.getInstance(ModelBridge.class);
         // Assume the current action is view.
         when(this.modelBridge.getCurrentAction()).thenReturn("view");
 
-        this.documentAccessBridge = this.mocker.getInstance(DocumentAccessBridge.class);
         // Assume all documents are viewable by the current user.
         when(this.documentAccessBridge.isDocumentViewable(any(DocumentReference.class))).thenReturn(true);
     }
 
     /**
      * Creates a mock {@link DocumentModelBridge} that has the specified reference.
-     * 
+     *
      * @param documentReference the document reference
      * @return the mock {@link DocumentModelBridge}
      * @throws Exception if creating the mock fails
@@ -107,7 +113,7 @@ public class SheetDocumentDisplayerTest
 
     /**
      * Sets the given document as the current document, adding the necessary expectations.
-     * 
+     *
      * @param document an XWiki document
      */
     private void setCurrentDocument(DocumentModelBridge document)
@@ -119,29 +125,27 @@ public class SheetDocumentDisplayerTest
 
     /**
      * Tests if the programming rights of the sheet are preserved when the document is already on the context.
-     * 
+     *
      * @throws Exception if something wrong happens
      */
     @Test
-    public void testPreserveSheetPRWhenDocumentIsOnContext() throws Exception
+    void preserveSheetPRWhenDocumentIsOnContext() throws Exception
     {
         DocumentModelBridge document = mockDocument(DOCUMENT_REFERENCE);
         DocumentModelBridge sheet = mockDocument(SHEET_REFERENCE);
 
         setCurrentDocument(document);
 
-        SheetManager sheetManager = this.mocker.getInstance(SheetManager.class);
-        when(sheetManager.getSheets(document, "view")).thenReturn(Collections.singletonList(SHEET_REFERENCE));
+        when(this.sheetManager.getSheets(document, "view")).thenReturn(List.of(SHEET_REFERENCE));
 
         DocumentModelBridge originalSecurityDoc = mock(DocumentModelBridge.class, "sdoc");
         // Required in order to preserve the programming rights of the sheet.
         when(this.modelBridge.setSecurityDocument(sheet)).thenReturn(originalSecurityDoc);
 
-        XDOM output = new XDOM(Collections.<Block>emptyList());
-        DocumentDisplayer documentDisplayer = this.mocker.getInstance(DocumentDisplayer.class);
-        when(documentDisplayer.display(eq(sheet), any(DocumentDisplayerParameters.class))).thenReturn(output);
+        XDOM output = new XDOM(List.of());
+        when(this.documentDisplayer.display(eq(sheet), any(DocumentDisplayerParameters.class))).thenReturn(output);
 
-        assertSame(output, this.mocker.getComponentUnderTest().display(document, new DocumentDisplayerParameters()));
+        assertSame(output, this.displayer.display(document, new DocumentDisplayerParameters()));
 
         // The security document must be reverted.
         verify(this.modelBridge).setSecurityDocument(originalSecurityDoc);
@@ -149,11 +153,11 @@ public class SheetDocumentDisplayerTest
 
     /**
      * Tests if the programming rights of the sheet are preserved when the document is not on the context.
-     * 
+     *
      * @throws Exception if something wrong happens
      */
     @Test
-    public void testPreserveSheetPRWhenDocumentIsNotOnContext() throws Exception
+    void preserveSheetPRWhenDocumentIsNotOnContext() throws Exception
     {
         DocumentModelBridge document = mockDocument(DOCUMENT_REFERENCE);
         DocumentModelBridge sheet = mockDocument(SHEET_REFERENCE);
@@ -164,21 +168,19 @@ public class SheetDocumentDisplayerTest
 
         // The sheet must be determined and displayed in a new execution context that has the target document as
         // the current document.
-        Map<String, Object> backupObjects = new HashMap<String, Object>();
+        Map<String, Object> backupObjects = new HashMap<>();
         when(this.modelBridge.pushDocumentInContext(document)).thenReturn(backupObjects);
 
-        SheetManager sheetManager = this.mocker.getInstance(SheetManager.class);
-        when(sheetManager.getSheets(document, "view")).thenReturn(Collections.singletonList(SHEET_REFERENCE));
+        when(this.sheetManager.getSheets(document, "view")).thenReturn(List.of(SHEET_REFERENCE));
 
         DocumentModelBridge originalSecurityDoc = mock(DocumentModelBridge.class, "sdoc");
         // Required in order to preserve the programming rights of the sheet.
         when(this.modelBridge.setSecurityDocument(sheet)).thenReturn(originalSecurityDoc);
 
-        XDOM output = new XDOM(Collections.<Block>emptyList());
-        DocumentDisplayer documentDisplayer = this.mocker.getInstance(DocumentDisplayer.class);
-        when(documentDisplayer.display(eq(sheet), any(DocumentDisplayerParameters.class))).thenReturn(output);
+        XDOM output = new XDOM(List.of());
+        when(this.documentDisplayer.display(eq(sheet), any(DocumentDisplayerParameters.class))).thenReturn(output);
 
-        assertSame(output, this.mocker.getComponentUnderTest().display(document, new DocumentDisplayerParameters()));
+        assertSame(output, this.displayer.display(document, new DocumentDisplayerParameters()));
 
         // The security document must be reverted.
         verify(this.modelBridge).setSecurityDocument(originalSecurityDoc);
